Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-9160

Alt+Return crashes when no quick fix is offered

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 2.8.0-beta
    • Qt Creator 2.8.0-beta
    • Editors
    • None
    • cb65cf3c1b5f18ddfd8084c607484384332859c5

    Description

      When invoking an quickfix via Alt+Return where no quickfix in found (e.g. on an empty line), creator crashes because of an empty pointer "newProposal" in codeassistant.cpp (line 268, 271)

      0	TextEditor::CodeAssistantPrivate::requestProposal	codeassistant.cpp	271	0x7fffe7aa2d7d	
      1	TextEditor::CodeAssistantPrivate::invoke	codeassistant.cpp	202	0x7fffe7aa29bb	
      2	TextEditor::CodeAssistant::invoke	codeassistant.cpp	537	0x7fffe7aa40b4	
      3	TextEditor::BaseTextEditorWidget::invokeAssist	basetexteditor.cpp	6750	0x7fffe79f382e	
      4	TextEditor::Internal::TextEditorPlugin::invokeQuickFix	texteditorplugin.cpp	275	0x7fffe79c2e49	
      5	TextEditor::Internal::TextEditorPlugin::qt_static_metacall	moc_texteditorplugin.cpp	88	0x7fffe7ac1694	
      6	QMetaObject::activate(QObject*, int, int, void**)	/opt/Qt5.0.1/5.0.1/gcc_64/lib/libQt5Core.so.5		0x7ffff662b111	
      7	QShortcut::event(QEvent*)	/opt/Qt5.0.1/5.0.1/gcc_64/lib/libQt5Widgets.so.5		0x7ffff74c8804	
      8	QApplicationPrivate::notify_helper(QObject*, QEvent*)	/opt/Qt5.0.1/5.0.1/gcc_64/lib/libQt5Widgets.so.5		0x7ffff74a83f4	
      9	QApplication::notify(QObject*, QEvent*)	/opt/Qt5.0.1/5.0.1/gcc_64/lib/libQt5Widgets.so.5		0x7ffff74ab7d1	
      10	QCoreApplication::notifyInternal(QObject*, QEvent*)	/opt/Qt5.0.1/5.0.1/gcc_64/lib/libQt5Core.so.5		0x7ffff6605a44	
      11	QShortcutMap::dispatchEvent(QKeyEvent*)	/opt/Qt5.0.1/5.0.1/gcc_64/lib/libQt5Gui.so.5		0x7ffff6b01bf1	
      12	QShortcutMap::tryShortcutEvent(QObject*, QKeyEvent*)	/opt/Qt5.0.1/5.0.1/gcc_64/lib/libQt5Gui.so.5		0x7ffff6b02aea	
      13	QApplication::notify(QObject*, QEvent*)	/opt/Qt5.0.1/5.0.1/gcc_64/lib/libQt5Widgets.so.5		0x7ffff74ad91b	
      14	QCoreApplication::notifyInternal(QObject*, QEvent*)	/opt/Qt5.0.1/5.0.1/gcc_64/lib/libQt5Core.so.5		0x7ffff6605a44	
      15	??	/opt/Qt5.0.1/5.0.1/gcc_64/lib/libQt5Widgets.so.5		0x7ffff74fef90	
      16	QApplicationPrivate::notify_helper(QObject*, QEvent*)	/opt/Qt5.0.1/5.0.1/gcc_64/lib/libQt5Widgets.so.5		0x7ffff74a83f4	
      17	QApplication::notify(QObject*, QEvent*)	/opt/Qt5.0.1/5.0.1/gcc_64/lib/libQt5Widgets.so.5		0x7ffff74ab7d1	
      18	QCoreApplication::notifyInternal(QObject*, QEvent*)	/opt/Qt5.0.1/5.0.1/gcc_64/lib/libQt5Core.so.5		0x7ffff6605a44	
      19	QGuiApplicationPrivate::processKeyEvent(QWindowSystemInterfacePrivate::KeyEvent*)	/opt/Qt5.0.1/5.0.1/gcc_64/lib/libQt5Gui.so.5		0x7ffff6adaec4	
      20	QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*)	/opt/Qt5.0.1/5.0.1/gcc_64/lib/libQt5Gui.so.5		0x7ffff6ae3cdd	
      21	QWindowSystemInterface::sendWindowSystemEventsImplementation(QFlags<QEventLoop::ProcessEventsFlag>)	/opt/Qt5.0.1/5.0.1/gcc_64/lib/libQt5Gui.so.5		0x7ffff6acf818	
      22	??	/opt/Qt5.0.1/5.0.1/gcc_64/plugins/platforms/libqxcb.so		0x7ffff173abd0	
      23	g_main_context_dispatch	/lib/x86_64-linux-gnu/libglib-2.0.so.0		0x7ffff51a1ab5	
      24	??	/lib/x86_64-linux-gnu/libglib-2.0.so.0		0x7ffff51a1de8	
      25	g_main_context_iteration	/lib/x86_64-linux-gnu/libglib-2.0.so.0		0x7ffff51a1ea4	
      26	QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>)	/opt/Qt5.0.1/5.0.1/gcc_64/lib/libQt5Core.so.5		0x7ffff664d724	
      27	QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>)	/opt/Qt5.0.1/5.0.1/gcc_64/lib/libQt5Core.so.5		0x7ffff660491b	
      28	QCoreApplication::exec()	/opt/Qt5.0.1/5.0.1/gcc_64/lib/libQt5Core.so.5		0x7ffff6607ebe	
      29	main	main.cpp	513	0x40d536	
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            davschul David Schulz
            lykurg Lorenz Haas
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes