Editor: Fix crash with 0-pointer in codeassistant.cpp

Task-number: QTCREATORBUG-9160

Change-Id: Iafc7a8342a91466ac33b07b73a85d9fca228b855
Reviewed-by: David Schulz <david.schulz@digia.com>
Reviewed-by: Nikolai Kosjar <nikolai.kosjar@digia.com>